# ChimeraStack_CLI

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.build  PHP_DB_TEMPLATE_FIXES.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  TODO.md  blueprint.md  build_executables.sh  build_linux_executable.sh  chimera-stack-cli.spec  chimerastack_CLI-codebase.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql.yml  tests.yml
docs/: authoring-templates.md
releases/: SHA256SUMS.txt
src/chimera/: __init__.py  cli.py
src/chimera/commands/: commands_codebase.md  create.py  list.py
src/chimera/templates/python/fastapi/sqlite/backend/: pyproject.toml
src/chimera/templates/python/fastapi/sqlite/backend/app/: main.py
src/chimera/templates/python/fastapi/sqlite/backend/app/api/v1/endpoints/: __init__.py  example.py
src/chimera/templates/python/fastapi/sqlite/backend/app/core/: config.py  settings.py
src/chimera/templates/python/fastapi/sqlite/backend/app/db/: base.py  session.py
src/chimera/templates/python/fastapi/sqlite/backend/app/models/: example.py
src/chimera/templates/python/fastapi/sqlite/backend/migrations/: env.py
src/chimera/templates/python/fastapi/sqlite/backend/tests/: conftest.py
src/chimera/templates/python/fastapi/sqlite/backend/tests/test_api/: test_example.py
tests/unit/: test_dashboard.py  test_fullstack_variants.py  test_php_variants.py  test_react_static.py  test_template_manager.py  test_template_smoke.py
(+114 files in other folders)
